[package]
name = "MeatSmoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "standard_framework"], version = "0.11.2" }
rand = "0.8.4"
